091224-M2 [docker file & fix pom.xml]